[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nosqllib"
version = "0.0.1"
authors = [
  { name="enyos", email="lebedevhh@outlook.fr" },
]
description = "A simple nosql json storage for small or big projects."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/enyoos/nosql"
"Bug Tracker" = "https://github.com/enyoos/nosql/issues"